secondfile/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AIA_Consumer_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIA Consumer Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_MPS_Signing_Date__c</fullName>
        <label>AIA MPS SP Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Master_Pricing_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIA Master Pricing Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANIRA_Product__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ANIRA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Developer_Tools_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global On/Off SP Flag to enable/disable Developers feature</description>
        <label>API Developer Tools Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASE_ACNA__c</fullName>
        <description>Field  to capture ACNA value associated to ASE Product</description>
        <label>ASE ACNA</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASE_Ordering_Type__c</fullName>
        <description>ASE Ordering Type Field for ASE Product</description>
        <label>ASE Ordering Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>ASR</fullName>
                </value>
                <value>
                    <fullName>WOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASE_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASE Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATOM_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATOM Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVPN_Contract_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN Contract Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgreementID__c</fullName>
        <label>Agreement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_for_Mobility__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is Read-Only. To change selection, edit &quot;MSA Countersigned&quot; in SP Account Detail section.</inlineHelpText>
        <label>IRU Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_T_Employee_UID__c</fullName>
        <label>AT&amp;T Employee UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Deal_Registration__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Company_ID__c</fullName>
        <label>BD Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Partner Exchange ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BasicTier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is to determine if the account is of type  SP Type Basic and also sets the default of the current tier to Platinum.</description>
        <inlineHelpText>Basic Tier</inlineHelpText>
        <label>No MDF/IDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Same_as_Company_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Billing Address is the same as Company Address check this box</inlineHelpText>
        <label>Same as Company Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>BD Billing Access</description>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Builder_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global On/Off SP Flag to enable/disable Campaign Builder Link Under Grow Tab in Portal Header</description>
        <label>Campaign Builder Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <label>Current Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_part_of_AT_T_Wholesale_Program__c</fullName>
        <label>Currently part of AT&amp;T Wholesale Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - Acquisition</fullName>
                </value>
                <value>
                    <fullName>Yes - Mid-market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPE_Trial_Formula__c</fullName>
        <formula>IF(DPE_Trial__c==true,&apos;DPE Trial&apos;,&apos;Non DPE Trial&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPE Trial Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPE_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To simplify the promotion creation process during the DPE Trial by allowing business to ‘flag’ the trial accounts and include that flag as a Promo criteria</description>
        <label>DPE Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Consumption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Consumption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on the flag value Document Archive link should be visible or hidden from the user under Manage &gt; Quotes &amp; Orders &gt; Documents Archive (for both Dynamic and Static header)</description>
        <label>Document Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_ADD_VLAN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature ADD VLAN in site inventory</description>
        <label>Enable feature ADD VLAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_Add_COS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature Add COS</description>
        <label>Enable feature Add COS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_Cancel_InFlight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature Cancel InFlight</description>
        <label>Enable feature Cancel InFlight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_Change_COS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature Change COS</description>
        <label>Enable feature Change COS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_Change_Speed_Access_Port__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature Change Speed/Access Port</description>
        <label>Enable feature Change Speed/Access Port</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_Change_VLAN_speed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature Change VLAN speed</description>
        <label>Enable feature Change VLAN speed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_Remove_COS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature Remove COS</description>
        <label>Enable feature Remove COS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_UBB_Add__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature UBB Add</description>
        <label>Enable feature UBB Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_UBB_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature UBB Change</description>
        <label>Enable feature UBB Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_UBB_Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature UBB Remove</description>
        <label>Enable feature UBB Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_feature_VLAN_Disconnect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable feature VLAN Disconnect</description>
        <label>Enable feature VLAN Disconnect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_SA_Contract_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from SA Contract Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexware_Product_Page__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Flexware Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPFlex_Product__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To control [enable/ disable] IPFlex feature in the Force Portal for SP Users</description>
        <label>IPFlex Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id18Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id18Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIS_Contract_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIS Contract Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRA_Number__c</fullName>
        <label>MRA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Mobility_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manage Mobility access link</description>
        <label>Manage Mobility Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_My_Funds__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Manage My Funds feature enablement</description>
        <label>Manage My Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagedRouter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CI flag from controlling Managed Router availability for Configuration</description>
        <label>Managed Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Directory Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobility_L2_ID__c</fullName>
        <label>SAART Location ID (L2)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility_TSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobility TSC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsSYId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Enable and Disable &quot;Network  Status&quot; Flag in Portal Header</description>
        <label>Network Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Active_BAN__c</fullName>
        <description>Roll Up Summary for Active BAN Count</description>
        <label>No. of Active BANs</label>
        <summaryFilterItems>
            <field>ASE_Billing_Account_Number__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASE_Billing_Account_Number__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Of_Active_CNM__c</fullName>
        <description>Rollup Summary for Active CNM</description>
        <label>No. of Active CNUMs</label>
        <summaryFilterItems>
            <field>ASE_Wholesale_Contract_Number__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASE_Wholesale_Contract_Number__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solution Provider</fullName>
                    <default>true</default>
                    <label>Solution Provider</label>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Enablement Resource</fullName>
                </value>
                <value>
                    <fullName>Test Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premier_Login__c</fullName>
        <label>Premier Login</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Enablement_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True : Automatic product enabling blocked, But manual enabling active
False : Automatic product enabling is active , But manual enabling blocked</description>
        <label>Product Enablement Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Trainings_Completed__c</fullName>
        <label>Product Trainings Completed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>Broadband</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
                <value>
                    <fullName>StaaS</fullName>
                </value>
                <value>
                    <fullName>Attwireless</fullName>
                </value>
                <value>
                    <fullName>CaaS</fullName>
                </value>
                <value>
                    <fullName>COLHS</fullName>
                </value>
                <value>
                    <fullName>IPFLEX</fullName>
                </value>
                <value>
                    <fullName>IPTollFree</fullName>
                </value>
                <value>
                    <fullName>MDM</fullName>
                </value>
                <value>
                    <fullName>MiiM</fullName>
                </value>
                <value>
                    <fullName>NBFW</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>PNT</fullName>
                </value>
                <value>
                    <fullName>PRIVATECLOUD</fullName>
                </value>
                <value>
                    <fullName>MP_OH</fullName>
                </value>
                <value>
                    <fullName>MP_P</fullName>
                </value>
                <value>
                    <fullName>MP_J</fullName>
                </value>
                <value>
                    <fullName>Office@Hand</fullName>
                </value>
                <value>
                    <fullName>Jasper</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Builder_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global On/Off SP Flag to enable/disable training feature</description>
        <label>Proposal Builder Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Regional Operations Manager</inlineHelpText>
        <label>Wireline ROM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsP5Q5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAART_Customer_Account_ID__c</fullName>
        <label>SAART Sub-Account ID (L3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAO_Formula__c</fullName>
        <formula>IF(SAO__c==true,&apos;SAO&apos;,&apos;Not SAO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAO Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAO_for_AIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAO for AIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_SP_Account_ID__c</fullName>
        <displayFormat>A-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>SFDC SP Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SP_Discount__c</fullName>
        <label>SP Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Tier__c</fullName>
        <formula>IF (ISPICKVAL(Current_Tier__c, &quot;Gold&quot;),&quot;Platinum Elite&quot;, IF(Master_Agent__c = true, &quot;Master Agent&quot;, TEXT(Current_Tier__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVID__c</fullName>
        <label>SVID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsXZrz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsSYE2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Level_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BD Service Level Agreements link access</description>
        <label>Service Level Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Birch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stop Birch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Center__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to control the SP access to the Support Center page</description>
        <label>Support Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wireline TSC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Amount__c</fullName>
        <label>Total Approved Amount</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trouble_Tickets__c</fullName>
        <defaultValue>true</defaultValue>
        <description>AOTS Trouble Tickets link access</description>
        <label>Trouble Tickets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireless_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WIreless Product radio button enable/disable</description>
        <label>Wireless Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bundleAccountNumber__c</fullName>
        <label>Bundle Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>customerId__c</fullName>
        <label>Customer ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hierarchyId__c</fullName>
        <label>Hierarchy ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoiceAccountNumber__c</fullName>
        <label>Invoice Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isAVPN__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AVPN Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMIS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MIS Product</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>